--- a/plugin.xml
+++ b/plugin.xml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements.  See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership.  The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License.  You may obtain a copy of the License at
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.    See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.    The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.    You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied.  See the License for the
-  specific language governing permissions and limitations
-  under the License.
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.    See the License for the
+    specific language governing permissions and limitations
+    under the License.
 -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:rim="http://www.blackberry.com/ns/widgets"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-login"
-    version="1.0.0">
-    <name>Login</name>
-    <description>Cordova Login Plugin</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova,login</keywords>
+        xmlns:rim="http://www.blackberry.com/ns/widgets"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        id="cordova-plugin-login"
+        version="1.0.0">
+        <name>Login</name>
+        <description>Cordova Login Plugin</description>
+        <license>Apache 2.0</license>
+        <keywords>cordova,login</keywords>
 
-    <engines>
-        <engine name="cordova" version=">=3.0.0" />
-    </engines>
+        <engines>
+                <engine name="cordova" version=">=3.0.0" />
+        </engines>
 
-    <js-module src="www/login.js" name="login">
-        <clobbers target="window.Login" />
-    </js-module>
+        <js-module src="www/login.js" name="login">
+                <clobbers target="window.Login" />
+        </js-module>
 
-    <!-- ios -->
-    <platform name="ios">
+        <!-- ios -->
+        <platform name="ios">
 
-        <config-file target="config.xml" parent="/*">
-            <feature name="Login">
-                <param name="ios-package" value="Login" />
-                <param name="onload" value="true" />
-            </feature>
-        </config-file>
+            <config-file target="config.xml" parent="/*">
+                <feature name="Login">
+                    <param name="ios-package" value="Login" />
+                    <param name="onload" value="true" />
+                </feature>
+            </config-file>
 
-        <!-- Plugin source code -->
-        <header-file src="src/ios/Login.h" />
-        <source-file src="src/ios/Login.m" />
+            <!-- Plugin source code -->
+            <header-file src="src/ios/Login.h" />
+            <source-file src="src/ios/Login.m" />
 
-    </platform>
+        </platform>
+
+        <!-- browser -->
+        <platform name="browser">
+
+            <js-module src="src/browser/LoginProxy.js" name="LoginProxy">
+                <merges target="" />
+            </js-module>
+
+        </platform>
 
 </plugin>
