--- a/plugin.xml
+++ b/plugin.xml
@@ -80,7 +80,7 @@
                 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
                 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
                 <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-                <uses-permission android:name="android.permission.RECEIVE_SMS">
+                <uses-permission android:name="android.permission.RECEIVE_SMS" />
                 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
                 <uses-permission android:name="android.permission.BLUETOOTH" />
                 <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
